[FIX] hr_contract_salary: Darken tooltips to be visible on lighter backgrounds
Purpose
=======

like test.odoo.com

--- a/hr_contract_salary/static/src/css/hr_contract_salary.less
+++ b/hr_contract_salary/static/src/css/hr_contract_salary.less
@@ -40,7 +40,6 @@
         .help-block {
             display: inline-block;
             margin: 0;
-            color: lighten(@gray-light, 20%);
             font-weight: 400;
         }
 
